# web_orm

./: .gitignore  pyproject.toml
ht_7_1/: config_7_1.ini  queries_.py
ht_7_1/ht_7_2_crud/: create.py  delete.py  main_.py  read.py  repository_.py  update.py
ht_7_1/migrations/: env.py
ht_7_1/migrations/versions/: 7a687806f14f_init.py
ht_7_1/seed/: groups_.py  lectors_.py  marks_.py  seed_main.py  students_.py  subjects_.py
ht_7_1/src/: db_connection_.py  models_.py
