[tool.poetry]
name = "orm"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
aiosqlite = "^0.19.0"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
